--- a/index.html
+++ b/index.html
@@ -3,7 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="css/style.css" />
+
     <title>PARTNER WITH KONSTUC</title>
   </head>
-  <body></body>
+
+  <!------------------------------------------------------------ шапка ------------------------------------------------------------------>
+
+  <body>
+    <header>
+      <div class="main-page">
+        <div class="container">
+          <div class="header-text">
+            <img class="logo-header" src="img/projeco-white.png" alt="logo" />
+            <h1 class="header-h1">Partner with konstuct</h1>
+            <p class="header-p">
+              An award-winning construction management firm
+            </p>
+            <button class="header-button">Scroll down</button>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="navbar">
+      <div class="container">
+        <div class="menu_inner">
+          <div class="logo">
+            <img src="img/projeco-black.png" alt="logo" />
+          </div>
+          <ul class="nav">
+            <li><a href="#">home</a></li>
+
+            <li><a href="#">about</a></li>
+            <li><a href="#">services</a></li>
+            <li><a href="#">work</a></li>
+            <li><a href="#">contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
