--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
       </div>
     </header>
-
+    <!------------------------------------------------------------ Навигация ------------------------------------------------------------------>
     <section class="navbar">
       <div class="container">
         <div class="menu_inner">
@@ -46,6 +46,38 @@
             <li><a href="#">work</a></li>
             <li><a href="#">contact</a></li>
           </ul>
+        </div>
+      </div>
+    </section>
+
+    <!------------------------------------------------------------ Story ------------------------------------------------------------------>
+
+    <section class="our_story">
+      <div class="container">
+        <div class="story_text">
+          <h2 class="story-h2">Our Story</h2>
+          <span class="line"></span>
+        </div>
+        <div class="story_block">
+          <div class="story_block_left">
+            <p class="story-p-top">
+              Founded in 2011 by John Mathew Smith,
+              <span class="Konstruct">Konstruct</span> has become the number one
+              construction management firm
+            </p>
+            <p class="story-p-bottom">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+              nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
+              erat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+              sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+              aliquam erat.
+            </p>
+          </div>
+          <div class="story_block_right">
+            <h2 class="h2-story_block_right">We plan</h2>
+            <h2 class="h2-story_block_right">We manage</h2>
+            <h2 class="h2-story_block_right">We build</h2>
+          </div>
         </div>
       </div>
     </section>
