--- a/index.html
+++ b/index.html
@@ -81,5 +81,26 @@
         </div>
       </div>
     </section>
+
+    <!--------------------------------------------------------- OUR CAPABILITIES --------------------------------------------------------->
+
+    <section class="Our-Capabilities">
+      <div class="container">
+        <div class="Box__Our-Capabilities">
+          <div class="Left-Our-Capabilities">
+            <h2 class="h2-capabilities">Our Capabilities</h2>
+            <span class="line-capabilities"></span>
+          </div>
+          <div class="Right-Our-Capabilities">
+            <p class="p-Our-Capabilities">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+              nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
+              erat.
+            </p>
+            <button class="button-Our-Capabilities">ALL Services</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
