--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <p class="header-p">
               An award-winning construction management firm
             </p>
-            <button class="header-button">Scroll down</button>
+            <button class="header-button" onclick="location.href='#footer'">
+              Scroll down
+            </button>
           </div>
         </div>
       </div>
@@ -100,7 +102,129 @@
             <button class="button-Our-Capabilities">ALL Services</button>
           </div>
         </div>
+        <div class="Our-Capabilities-bottom">
+          <div class="Our-Capabilities-bottom-items">
+            <img
+              class="Our-Capabilities-bottom-image"
+              src="img/project.svg"
+              alt="ico"
+            />
+            <h2 class="h2-project">Project and construction management</h2>
+            <p class="p-project">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+              nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
+              erat.
+            </p>
+          </div>
+          <div class="Our-Capabilities-bottom-items">
+            <img
+              class="Our-Capabilities-bottom-image"
+              src="img/structure.svg"
+              alt="ico"
+            />
+            <h2 class="h2-project">Structure audit and maintenance</h2>
+            <p class="p-project">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+              nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
+              erat.
+            </p>
+          </div>
+          <div class="Our-Capabilities-bottom-items">
+            <img
+              class="Our-Capabilities-bottom-image"
+              src="img/factory.svg"
+              alt="ico"
+            />
+            <h2 class="h2-project">Factory construction and modeling</h2>
+            <p class="p-project">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+              nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
+              erat.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
+
+    <!--------------------------------------------------------- Want --------------------------------------------------------->
+
+    <section class="want">
+      <div class="want-top">
+        <h2 class="want-top_h2">Want to build something amazing?</h2>
+        <button class="want-top_button">get in touch</button>
+      </div>
+      <div class="want-bottom">
+        <div class="want-bottom-items">
+          <h2 class="want-bottom_h2">Newsletter Signup</h2>
+
+          <form action="form" action="#" method="post">
+            <input
+              type="email"
+              class="email-input"
+              placeholder="test@youremail.com"
+              required
+            />
+            <button type="submit" class="submit-button">Signup</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!--------------------------------------------------------- footer --------------------------------------------------------->
+    <section class="footer-1" id="footer">
+      <div class="container">
+        <div class="flex-big-blok">
+          <div class="company">
+            <h3 class="h3-company">company</h3>
+            <img class="img-company" src="img/projeco-white.png" alt="logo" />
+            <p class="p-company">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+              nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
+              erat.
+            </p>
+          </div>
+          <div class="links">
+            <h3 class="h3-links">links</h3>
+            <div class="links-flex">
+              <ul class="nav-links-1">
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">projects</a></li>
+                <li><a href="#">contact us</a></li>
+              </ul>
+              <ul class="nav-links-2">
+                <li><a href="#">faq</a></li>
+                <li><a href="#">terms</a></li>
+                <li><a href="#">careers</a></li>
+              </ul>
+              <ul class="nav-links-3">
+                <li><a href="#">blog</a></li>
+                <li><a href="#">partners</a></li>
+                <li><a href="#">news</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="contact_us">
+            <h3 class="h3-contact">contact us</h3>
+            <p class="p-contact">
+              213 Baker Street <br />
+              Oriel City Kounty<br />7000 KNW,<br />Kountry Name
+            </p>
+            <p class="p-tel">+23 994 233 4022</p>
+            <p class="p-mail">info@konstruct.com</p>
+          </div>
+          <div class="social_links">
+            <img src="img/footer/facebook.svg" alt="facebook" />
+            <img src="img/footer/twitter.svg" alt="twitter" />
+            <img src="img/footer/google.svg" alt="google" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer-2">
+      <p class="footer-2-p">
+        &copy; 2017 Konstruct Inc. Designed by Jane Kathryn Teo
+      </p>
+    </footer>
   </body>
 </html>
