--- a/index.html
+++ b/index.html
@@ -153,19 +153,24 @@
         <h2 class="want-top_h2">Want to build something amazing?</h2>
         <button class="want-top_button">get in touch</button>
       </div>
-      <div class="want-bottom">
-        <div class="want-bottom-items">
-          <h2 class="want-bottom_h2">Newsletter Signup</h2>
-
-          <form action="form" action="#" method="post">
-            <input
-              type="email"
-              class="email-input"
-              placeholder="test@youremail.com"
-              required
-            />
-            <button type="submit" class="submit-button">Signup</button>
-          </form>
+      <div class="want-bottom-background">
+        <div class="container">
+          <div class="want-bottom">
+            <div class="want-bottom-items">
+              <h2 class="want-bottom_h2">Newsletter Signup</h2>
+              <div class="form__flex">
+                <form action="form" action="#" method="post">
+                  <input
+                    type="email"
+                    class="email-input"
+                    placeholder="test@youremail.com"
+                    required
+                  />
+                  <button type="submit" class="submit-button">Signup</button>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
